<resources>
    <string name="app_name">Recipe</string>
    <string name="logo">logo</string>
    <string name="login">LOGIN</string>
    <string name="not_registered_create_account">Not Registered? Create account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="loginButton">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="loginText">Login</string>
    <string name="already_registered_sign_in">Already registered?</string>
    <string name="register_button">Register Now</string>
    <string name="password_hint">Enter Password</string>
    <string name="email_hint">Enter Email</string>
    <string name="username_hint">Enter Username</string>
    <string name="registerText">Get access to over 100 recipes for free!</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="home">Home</string>
    <string name="log_out">Log Out</string>
    <string name="all">all</string>
    <string name="dropdown_icon" />
    <string name="search">Search</string>
    <string name="cancel_icon">Cancel</string>
    <string name="invalidate_search">Invalid Search</string>
    <string name="y_results">Nothing Found</string>
    <string name="fiction">fiction</string>
    <string name="non_fiction">non_fiction</string>
    <string name="welcome_message_with_name">Welcome, %1$s!. Browse Available Recipes</string>
    <string name="welcome_guest">Welcome, Guest!</string>
    <string name="add_new_recipe">Add New Recipe</string>
    <string name="cost_colon" />
    <string name="costs_colon">Cost</string>
    <string name="price_colon">Cost</string>
    <string name="available_quantity_colon">Serving Size</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="refresh">Refresh</string>
    <string name="title">Title</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="servings">TotalServings</string>
    <string name="total_time">Total Time</string>
    <string name="image_source">Add Image</string>
    <string name="publication_date">Create Date</string>
    <string name="cost">Cost</string>
    <string name="submit">Submit</string>
    <string name="info_description" />
    <string name="recipe_image" />
    <string name="currency_format">$%1$s</string>
    <string name="minutes_format">%1$d mins</string>
    <string name="category">Category</string>
    <string name="servingss">Servings</string>
    <string name="total_timee">Total  Time</string>
    <string name="costt">Cost</string>
    <string name="instructions">Instructions</string>
    <string name="ingredientss">Ingredients</string>
    <string name="instruction">Instructions</string>
    <string name="total_time_with_unit">%1$d mins</string>
    <string name="servings_with_text">%1$s Servings</string>
    <string name="total_time_format">Total Time: %s min</string>
    <string name="servings_format">Servings: %s</string>
    <string name="favorite" />
    <string name="remove_from_favorite">Remove From Favorite</string>
    <string name="recipe_title">Recipe Title</string>
    <string name="remove_from_cart">Remove from Favorite</string>
    <string name="total_price_colon" />
    <string name="checkout" />
    <string name="categoryy">Category</string>
    <string name="total_servingss">Total Servings</string>
    <string name="ingredientsss">Ingredients</string>
    <string name="preperation_timee">Preperation Time</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="total_cost">Total Cost</string>
    <string name="instructionss">Instructions</string>
    <string name="all_favorite_recipes">All Favorite Recipes</string>
    <string name="add_image_url">Add image url</string>
</resources>