<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.recipe.fragments.recipeForm.RecipeFormViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="#DDDDDD"
        tools:context=".fragments.recipeForm.RecipeFormFragment">

        <!-- Title -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/titleLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/titleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.title}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Ingredients -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ingredientsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/ingredients">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ingredientsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.ingredients}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ingredientsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.description}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Servings -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/servingsLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/descriptionLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/servings">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/servingsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.servings}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Total Time -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/totalTimeLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/servingsLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/total_time">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/totalTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@={viewModel.totalTime}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Image Source -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/imgSrcLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/totalTimeLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/image_source">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imgSrcEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.imgSrc}" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/recipeImageView"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@id/imgSrcLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="TODO" />

        <!-- Publication Date -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pubDateLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imgSrcLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/publication_date">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pubDateEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:text="@={viewModel.pubDate}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Cost -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/costLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/pubDateLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/cost">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/costEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:text="@={viewModel.cost}" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit Button -->
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/submit"
            app:layout_constraintTop_toBottomOf="@id/costLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
