<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.home.HomeFragment">

    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.example.recipe.fragments.home.HomeViewModel" />
        <variable
            name="shouldCancelShow"
            type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:padding="16dp"
        >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textViewWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{`Welcome, ` + viewModel.userName}"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view_filter_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:cardCornerRadius="8dp"
            app:layout_constraintTop_toBottomOf="@id/textViewWelcome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp">

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/search"
            android:inputType="textAutoComplete"
            android:padding="12dp"
            app:layout_constraintTop_toBottomOf="@id/card_view_filter_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            android:layout_marginTop="12dp" />

        <ImageButton
            android:id="@+id/imageButtonStopSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close"
            android:contentDescription="@string/invalidate_search"
            app:layout_constraintEnd_toEndOf="@id/et_search"
            app:layout_constraintTop_toTopOf="@id/et_search"
            app:layout_constraintBottom_toBottomOf="@id/et_search"
            android:layout_marginEnd="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="407dp"
            android:layout_height="478dp"
            android:layout_marginTop="8dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/no_of_results"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_search"
            app:layout_constraintVertical_bias="0.205"
            tools:listitem="@layout/home_recycler_item" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/no_of_results"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y_results"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn"
            android:layout_marginBottom="16dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/refresh"
            app:cornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            app:layout_constraintEnd_toStartOf="@+id/imageButtonStopSearch"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintHorizontal_bias="0.95" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
